--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="hometext">
                 <h1>Téléchargement de GODAIM</h1>
                 <h2>Télécharger la dernière version du jeu</h2>
-                <a class="downloadbtn" rel="">Télécharger</a>
+                <a class="downloadbtn" href="https://drive.google.com/file/d/1eJL8WHivQ6or5-TPcq0aAwToB0m4Np5N/view?usp=share_link">Télécharger</a>
 
             </div>
         </section>
