--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
      <!--=============== FAVICON ===============-->
     <link
         rel="shortcut icon"
-        href="assets/img/icon.png"
+        href="assets/img/aim.png"
         type="image/x-icon"
     />
 </head>
@@ -25,7 +25,7 @@
         <header class="header" id="header">
             <div class="navbar">
                 <div class="icon">
-                    <img src="assets/img/icon.png" />
+                    <img src="assets/img/aim.png" />
                 </div>
                 <div class="containerleft">
                     <h1 class="navtitle"> <a href="#home">GODAIM</a></h1>
@@ -41,7 +41,7 @@
             </div>
         </header>
     <main class="main">
-        <!--=============== Section Home ===============-->
+        <!--=============== Section Project ===============-->
         <section class="project section" id="project">
             <div class="hometext">
                 <h1>BIENVENUE SUR LE SITE GODAIM</h1>
@@ -52,11 +52,12 @@
             </div>
         </section>
 
-        <!--=============== Section Project ===============-->
+        <!--=============== Section Download ===============-->
         <section class="download section" id="download">
             <div class="hometext">
                 <h1>Téléchargement de GODAIM</h1>
                 <h2>Télécharger la dernière version du jeu</h2>
+                <h2>Dernière version actuel : 1.2.1</h2>
                 <a class="downloadbtn" href="https://drive.google.com/file/d/1eJL8WHivQ6or5-TPcq0aAwToB0m4Np5N/view?usp=share_link">Télécharger</a>
 
             </div>
