--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GODAIM HUB</title>
+    <title> GODAIM</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
      <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700;lang=en" />
@@ -28,12 +28,13 @@
                     <img src="assets/img/aim.png" />
                 </div>
                 <div class="containerleft">
-                    <h1 class="navtitle"> <a href="#home">GODAIM</a></h1>
+                    <h1 class="navtitle"> <a href="#home"><span class="lime">GODAIM</span></a></h1>
                 </div>
 
                 <div class="containerright">
-                    <a href="#project">PROJECT</a>
-                    <a href="#download">DOWNLOAD</a>
+                    <a href="#project">PROJET</a>
+                    <a href ="#presentation">Présentation</a>
+                    <a href="#download">Télécharger</a>
                 </div>
                     <div class="containertheme">
                         <i class="fa-regular fa-sun"></i>
@@ -44,22 +45,46 @@
         <!--=============== Section Project ===============-->
         <section class="project section" id="project">
             <div class="hometext">
-                <h1>BIENVENUE SUR LE SITE GODAIM</h1>
-                <h2>GODAIM à été crée dans le but d'amiliorer votre préscision</h2>
-                <h2>Le Jeu et toujours en développement actif et en alpha fermer</h2>
-                <h2>Seuls les personnes disposant du lien de jeu peuvent y accéder</h2>
-                <h2>Codé Par Tyron Morcel en C#</h2>
+                <h1>BIENVENUE SUR LE SITE <span class="lime">GODAIM</span></h1>
+                    <!-- <h2><lime>GODAIM</lime> à été crée dans le but d'amiliorer votre préscision</h2> -->
+                    <p> <span class="lime">GODAIM </span> à été crée dans le but d'amiliorer <span class="lime">Votre préscision</span> Le Jeu et toujours en développement actif et en alpha fermer. Seuls les personnes disposant du lien de jeu peuvent y accéder. Codé Par Tyron Morcel en C#</p>
             </div>
         </section>
 
+        <!--=============== Section Présentation ===============-->
+        <section class="presentation section " id="presentation">
+            <div class="presentationText">
+                <h1> Présentation de <span class="lime">GODAIM</span></h1>
+                <p>Voici quelques images tirées du jeu</p>
+            </div>
+            
+            <div class="containerCard">
+                <div class="container1">
+                    <h1>GridShot</h1>
+                    <div class="container1img">
+                        <img src="assets/img/gridshot.jpg"/>
+                    </div>
+                    <p>Trois cibles simultanées !</p>
+                </div>
+                <div class="container2">
+                    <h1>SixShot</h1>
+                    <div class="container2img">
+                        <img src="assets/img/sixshot.jpg"/>
+                    </div>
+                    <p>Six cibles de préscision !</p>
+                </div>
+            </div>
+
+            <p class="paragraphe">Et d'autre mod de jeu  <span class="lime">à découvrir</span> !</p>
+        </section>
+        
         <!--=============== Section Download ===============-->
         <section class="download section" id="download">
             <div class="hometext">
-                <h1>Téléchargement de GODAIM</h1>
-                <h2>Télécharger la dernière version du jeu</h2>
-                <h2>Dernière version actuel : 1.2.1</h2>
+                <h1>Téléchargement de <span class="lime">GODAIM</span></h1>
+                <p>Télécharger la dernière version du jeu</p>
+                <p>Dernière version actuel : <span class="lime"> 1.2.1</span></p>
                 <a class="downloadbtn" href="https://drive.google.com/file/d/1eJL8WHivQ6or5-TPcq0aAwToB0m4Np5N/view?usp=share_link">Télécharger</a>
-
             </div>
         </section>
     </main>
