--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> GODAIM</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/main.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
      <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700;lang=en" />
 
@@ -22,32 +23,30 @@
 
 <body>
         <!--=============== Nav Bar ===============-->
-        <header class="header" id="header">
-            <div class="navbar">
-                <div class="icon">
-                    <img src="assets/img/aim.png" />
-                </div>
-                <div class="containerleft">
-                    <h1 class="navtitle"> <a href="#home"><span class="lime">GODAIM</span></a></h1>
-                </div>
+                <header class="header" id="header">
+                    <div class="navbar">
+                        <div class="icon">
+                            <img src="assets/img/aim.png" />
+                        </div>
+                        <div class="containerleft">
+                            <h1 class="navtitle"> <a href="#home"><span class="lime">GODAIM</span></a></h1>
+                        </div>
 
-                <div class="containerright">
-                    <a href="#project">PROJET</a>
-                    <a href ="#presentation">Présentation</a>
-                    <a href="#download">Télécharger</a>
-                </div>
-                    <div class="containertheme">
-                        <i class="fa-regular fa-sun"></i>
+                        <div class="containerright">
+                            <a href="#project">PROJET</a>
+                            <a href ="#presentation">Présentation</a>
+                            <a href="#download">Télécharger</a>
+                            <a href="assets/html/faq.html">FAQ</a>
+                        </div>
                     </div>
-            </div>
-        </header>
+                </header>
     <main class="main">
         <!--=============== Section Project ===============-->
         <section class="project section" id="project">
             <div class="hometext">
                 <h1>BIENVENUE SUR LE SITE <span class="lime">GODAIM</span></h1>
                     <!-- <h2><lime>GODAIM</lime> à été crée dans le but d'amiliorer votre préscision</h2> -->
-                    <p> <span class="lime">GODAIM </span> à été crée dans le but d'amiliorer <span class="lime">Votre préscision</span> Le Jeu et toujours en développement actif et en alpha fermer. Seuls les personnes disposant du lien de jeu peuvent y accéder. Codé Par Tyron Morcel en C#</p>
+                    <p> <span class="lime">GODAIM </span> à été crée dans le but d'amiliorer <span class="lime">Votre préscision</span> Le Jeu est toujours en développement actif et en alpha fermer. Seuls les personnes disposant du lien de jeu peuvent y accéder. Codé Par Tyron Morcel en C#</p>
             </div>
         </section>
 
@@ -88,5 +87,16 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="leftFooter">
+            <p>Crée Par Wadec</p>
+        </div>
+        <div class="rightFooter">
+            <a href="https://www.instagram.com/tyrxxn.mrl/"><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-discord"></i></a>
+        </div>
+    </footer>
+    <script src="../js/sendmail.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 </html>
