--- a/assets/html/faq.html
+++ b/assets/html/faq.html
@@ -5,8 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> GODAIM</title>
-        <link rel="stylesheet" href="../css/main.css" />
-        <link rel="stylesheet" href="../css/styles.css" />
+        <link rel="stylesheet" href="../css/faq.css" />
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
          <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700;lang=en" />
     
@@ -21,15 +20,7 @@
 <body>
     <header class="header" id="header">
         <div class="navbar">
-            <div class="icon">
-                <img src="../img/aim.png" />
-            </div>
-            <div class="containerleft">
-                <h1 class="navtitle"> <a href="../../index.html"><span class="lime">GODAIM</span></a></h1>
-            </div>
-
-            <div class="containerright">
-            </div>
+            <a href="../../index.html"><span class="lime">GODAIM</span></a>
         </div>
     </header>
 <main>
